@@ -391,7 +391,7 @@ Dimitar Toshkov Zhekov.
 	10		Contacts, URLs
 ================================================================================
 
-FIM is (C) 2007-2018 Michele Martone.
+FIM is (C) 2007-2020 Michele Martone.
 
  Email: "dezperado_FOobAr_autistici_Baz_org", just care replacing
          _FOobAr_ with a '@' and _Baz_ with a '.'.
